--- a/client/mobile/stockmonster/package.json
+++ b/client/mobile/stockmonster/package.json
@@ -12,7 +12,11 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "@babel/core": "^7.0.0-beta",
+    "babel-core": "^7.0.0-beta",
+    "babel-preset-react-native": "5.0.2",
     "expo": "^31.0.2",
+    "jest": "^23.6.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-navigation": "^2.18.2",
