--- a/client/mobile/stockmonster/package.json
+++ b/client/mobile/stockmonster/package.json
@@ -21,6 +21,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-navigation": "^2.18.2",
     "react-redux": "^6.0.0",
+    "redux-thunk": "^2.1.0",
     "redux": "^4.0.1"
   },
   "devDependencies": {
