--- a/client/mobile/stockmonster/package.json
+++ b/client/mobile/stockmonster/package.json
@@ -11,18 +11,20 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/samples": "2.1.1",
     "@babel/core": "^7.0.0-beta",
+    "@expo/samples": "2.1.1",
     "babel-core": "^7.0.0-beta",
     "babel-preset-react-native": "5.0.2",
     "expo": "^31.0.2",
     "jest": "^23.6.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-elements": "^1.0.0-beta7",
+    "react-native-tab-view": "^1.3.1",
     "react-navigation": "^2.18.2",
     "react-redux": "^6.0.0",
-    "redux-thunk": "^2.1.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
